--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'kafka_producer_gradle'
 include 'kafka-basics'
+include 'kafka-basics:kafka-producer-wikimedia'
+findProject(':kafka-basics:kafka-producer-wikimedia')?.name = 'kafka-producer-wikimedia'
+include 'kafka-producer-wikimedia-producer'
+include 'kafka-producer-wikimedia'
 
