--- a/kafka-consumer-opensearch/build.gradle
+++ b/kafka-consumer-opensearch/build.gradle
@@ -20,7 +20,10 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:2.0.13'
 
     // https://mvnrepository.com/artifact/org.opensearch.client/opensearch-rest-high-level-client
-    implementation 'org.opensearch.client:opensearch-rest-high-level-client:1.2.4'
+    //implementation 'org.opensearch.client:opensearch-rest-high-level-client:1.2.4'
+
+    // https://mvnrepository.com/artifact/org.opensearch.client/opensearch-rest-high-level-client
+    implementation 'org.opensearch.client:opensearch-rest-high-level-client:2.14.0'
 
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation 'com.google.code.gson:gson:2.9.0'
